--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Proof of concept for migrating from RequireJS to Webpack",
   "main": "index.js",
   "dependencies": {
-    "babel-polyfill": "^6.9.1",
-    "jquery": "~3.1.0",
-    "webpack": "~1.13.1"
+    "babel-polyfill": "~6.9.1",
+    "jquery": "~3.1.0"
   },
   "scripts": {
     "webpack": "./node_modules/.bin/webpack --progress --colors"
@@ -15,8 +14,9 @@
     "babel-core": "~6.11.4",
     "babel-loader": "~6.2.4",
     "babel-preset-es2015": "~6.9.0",
-    "html-loader": "^0.4.3",
-    "text-loader": "0.0.1"
+    "html-loader": "~0.4.3",
+    "raw-loader": "~0.5.1",
+    "webpack": "~1.13.1"
   },
   "author": "Yosuke Suzuki",
   "license": "MIT"
