--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Build output
+webroot/dist
+
 # Logs
 logs
 *.log
@@ -28,7 +31,7 @@ build/Release
 
 # Dependency directories
 node_modules
-jspm_packages
+webroot/jspm_packages
 
 # Optional npm cache directory
 .npm
